--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
-{% extends "base.html" %}
-
-{% block title %}
-Home page
-{% endblock %}
-
-{% block body %}
-    <h1>Welcome!</h1>
-    <h2>This is home page!</h2>
+{% extends "base.html" %} {% block title %} Home page {% endblock title %} {%
+block body %}
+<h1>Welcome!</h1>
+<h2>This is home page!</h2>
 {% endblock body %}
