--- a/templates/base.html
+++ b/templates/base.html
@@ -1,52 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/main.css') }}"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-    <title>{% block title %}{% endblock title %}</title>
-  </head>
-  <body>
-    <div class="container">
-      <header
-        class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
-      >
-        <a
-          href="/"
-          class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+        rel="stylesheet"
+        href="{{ url_for('static', filename='css/main.css') }}"
+      />
+      <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+        crossorigin="anonymous"
+      />
+      <title>{% block title %}{% endblock title %}</title>
+    </head>
+    <body>
+      <div class="container">
+        <header
+          class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
         >
-          <svg class="bi me-2" width="40" height="32" aria-hidden="true">
-            <img class='header__icon' src="{{ url_for('static', filename='img/icon.png')}}" alt="icon">
-          </svg>
-          <span class="fs-4">Simple header</span>
-        </a>
-        <ul class="nav nav-pills">
-          <li class="nav-item">
-            <a
-              href="{{ url_for('home')}}"
-              class="nav-link active"
-              aria-current="page"
-              >Home</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="{{ url_for('about')}}" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="{{ url_for('hello')}}" class="nav-link">Hello</a>
-          </li>
-        </ul>
-      </header>
-      {% block body %}{% endblock body %}
-    </div>
-  </body>
-</html>
+          <a
+            href="/"
+            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+          >
+            <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+              <img class='header__icon' src="{{ url_for('static', filename='img/icon.png')}}" alt="icon">
+            </svg>
+            <span class="fs-4">Simple header</span>
+          </a>
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a
+                href="{{ url_for('home')}}"
+                class="nav-link active"
+                aria-current="page"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('posts')}}" class="nav-link">Posts</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('create_post')}}" class="nav-link">Create post</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('about')}}" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="{{ url_for('hello', name='Evgeniy', id=1)}}" class="nav-link">Hello</a>
+            </li>
+          </ul>
+        </header>
+        {% block body %}{% endblock body %}
+      </div>
+    </body>
+  </html>
